# o-mvll

./: .buildinfo  .gitignore  .gitmodules  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  sign.sh
src/: CMakeLists.txt  api.html  code-completion.html  config.html  exports.txt  intro.html  llvm.html  obfuscation.html  versioning.html
src/cmake/: GitInfo.cmake
src/core/: CMakeLists.txt  Jitter.cpp  jitter.cpp  log.cpp  omvll_config.cpp  plugin.cpp  utils.cpp
src/core/python/: CMakeLists.txt  PyConfig.cpp  PyObfuscationConfig.cpp  PyObfuscationConfig.hpp  init.hpp  pyllvm.cpp  pylog.cpp  pyobf_opt.cpp
src/include/omvll/: Jitter.hpp  ObfuscationConfig.hpp  PyConfig.hpp  config.hpp.in  jitter.hpp  log.hpp  omvll_config.hpp  passes.hpp  utils.hpp  versioning.hpp  visitvariant.hpp
src/include/omvll/passes/: Metadata.hpp  ObfuscationOpt.hpp
src/include/omvll/passes/anti-hook/: AntiHook.hpp  AntiHookOpt.hpp
src/include/omvll/passes/arithmetic/: Arithmetic.hpp  ArithmeticOpt.hpp
src/include/omvll/passes/basic-block-duplicate/: BasicBlockDuplicate.hpp  BasicBlockDuplicateOpt.hpp
src/include/omvll/passes/break-cfg/: BreakControlFlow.hpp  BreakControlFlowOpt.hpp
src/include/omvll/passes/cfg-flattening/: ControlFlowFlattening.hpp  ControlFlowFlatteningOpt.hpp
src/include/omvll/passes/cleaning/: Cleaning.hpp
src/include/omvll/passes/flattening/: ControlFlowFlattening.hpp  ControlFlowFlatteningOpt.hpp
src/include/omvll/passes/function-outline/: FunctionOutline.hpp  FunctionOutlineOpt.hpp
src/include/omvll/passes/indirect-branch/: IndirectBranch.hpp  IndirectBranchOpt.hpp
src/include/omvll/passes/indirect-call/: IndirectCall.hpp  IndirectCallOpt.hpp
src/include/omvll/passes/logger-bind/: LoggerBind.hpp
src/include/omvll/passes/objc-cleaner/: ObjCleaner.hpp  ObjCleanerOpt.hpp
src/include/omvll/passes/objcleaner/: ObjCleaner.hpp  ObjCleanerOpt.hpp
src/include/omvll/passes/opaque-constants/: OpaqueConstants.hpp  OpaqueConstantsOpt.hpp
src/include/omvll/passes/string-encoding/: Routines.h  (+2 more)
src/passes/: CMakeLists.txt  Metadata.cpp
src/passes/anti-hook/: AntiHook.cpp  CMakeLists.txt
src/passes/arithmetic/: Arithmetic.cpp  CMakeLists.txt
src/passes/basic-block-duplicate/: BasicBlockDuplicate.cpp  CMakeLists.txt
src/passes/break-cfg/: BreakControlFlow.cpp  CMakeLists.txt
src/passes/cfg-flattening/: ControlFlowFlattening.cpp
src/passes/cleaning/: CMakeLists.txt  Cleaning.cpp
src/passes/flattening/: CMakeLists.txt  ControlFlowFlattening.cpp
src/passes/function-outline/: CMakeLists.txt  FunctionOutline.cpp
src/passes/indirect-branch/: CMakeLists.txt  IndirectBranch.cpp
src/passes/indirect-call/: CMakeLists.txt  IndirectCall.cpp
src/passes/logger-bind/: CMakeLists.txt  LoggerBind.cpp
src/passes/objc-cleaner/: CMakeLists.txt  ObjCleaner.cpp
src/passes/objcleaner/: CMakeLists.txt  ObjCleaner.cpp
src/passes/opaque-constants/: CMakeLists.txt  GenOpaque.cpp  GenOpaque.hpp  OpaqueConstants.cpp
src/passes/opaque-field-access/: CMakeLists.txt  OpaqueFieldAccess.cpp
src/passes/string-encoding/: CMakeLists.txt  Routines.cpp  StringEncoding.cpp
src/passes/strings-encoding/: CMakeLists.txt  StringEncoding.cpp
src/passes/tak-injection/: CMakeLists.txt  TakInjection.cpp
src/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
src/test/core/plugin/: find-omvll-config-cwd.c  find-omvll-config-plugindir.c  set-output-folder-omvll-config.c
src/test/passes/arithmetic/: arithmetic-global-exclude-x86_64-linux.c  config_defaultConfig_exclude_function.py  config_defaultConfig_exclude_module.py  config_defaultConfig_include_function.py  config_defaultConfig_include_last.py  config_defaultConfig_include_new_seed.py  config_defaultConfig_include_seed.py  config_defaultConfig_probability_0.py  config_defaultConfig_probability_100.py  config_exclude_function.py  config_exclude_module.py  config_rounds_0.py  config_rounds_1.py  config_rounds_2.py  config_rounds_3.py  default-config-x86_64-linux-android.c  default-config-x86_64-linux-ios.c  default-config-x86_64-linux.c  report_diff-x86_64-linux.c  report_diff.py  xor-aarch64-android.c  xor-aarch64-ios.c  xor-aarch64.c  xor-arm-android.c  xor-x86_64-darwin.c  xor-x86_64-linux.c  xor-x86_64-nix.c
src/test/passes/basic-block-duplicate/: basic-aarch64-ios.ll  config_all.py
src/test/passes/break-cfg/: basic-aarch64-ios.c  config_all.py  inline-aarch64-ios.c
src/test/passes/cfg-flattening/: basic-aarch64-android.c  basic-aarch64-ios.c  basic-aarch64.c  basic-arm-android.c  basic-native.c  cfg-flattening-global-exclude-x86_64-linux.c  config_all.py  config_exclude_function.py  config_exclude_module.py
src/test/passes/flattening/: basic-aarch64.c  basic-arm-android.c  basic-native.c  config_all.py
src/test/passes/function-outline/: basic-aarch64-ios.ll  config_all.py
src/test/passes/indirect-branch/: basic-aarch64-ios.ll  config_all.py
src/test/passes/indirect-call/: basic-aarch64-ios.ll  config_all.py
src/test/passes/opaque-constants/: basic-aarch64-ios.ll  basic_cmp-aarch64-ios.ll  config_all.py  opaque-constants-infinite-loop.ll
src/test/passes/string-encoding/: basic-aarch64-array-strings-global-enc.ll  basic-aarch64-array-strings-local-enc-android.ll  basic-aarch64-array-strings-local-enc-ios.ll  basic-aarch64-array-strings-local-enc.ll  basic-aarch64-array-strings.ll  basic-aarch64-ce-init-android.ll  basic-aarch64-ce-init-ios.ll  basic-aarch64-ce-init.ll  basic-aarch64-optlocal-android.ll  basic-aarch64-optlocal-ios.ll  basic-aarch64-optlocal.ll  basic-aarch64-stackopt.ll  basic-aarch64.cpp  basic-arm-android.cpp  basic-ios-swift.ll  config_exclude_function.py  config_exclude_module.py  config_replace.py  string-encoding-global-exclude-x86_64-linux.c
src/test/passes/strings-encoding/: basic-aarch64-android.cpp  basic-aarch64-ce-init.ll  basic-aarch64.cpp  basic-arm-android.cpp  basic-ios-swift.ll  config_remove.py  config_replace.py
src/test/swift-wmo/: basic-swift-wmo.swift
src/test/swift-wmo/Inputs/: bar.swift  config_swift_wmo.py  foo.swift
(+88 files in other folders)
